Python Mode News
================

Prepared for version 6.3.2
-----------------------

- Use ‘pyflakes3’
- ‘py-python-edit-version’ now defaults to "python3",
- ‘py-up’ as pythonic ‘backward-sexp’,
  ‘py-down’ as ‘forward-sexp’
   consider  
   (define-key python-mode-map [(control meta f)] 'py-down)
   (define-key python-mode-map [(control meta b)] 'py-up)

- Customizable boolean ‘py-do-completion-p’ 
  permits disabling python-mode native completion.

- `isympy3', am IPython console for SymPy


New in version 6.3.1
-----------------------

Minor bugfixes

New in version 6.3.0
-----------------------

- <RET> and <C-j> normalized/swapped

  <RET> now defaults to ‘py-newline-and-indent’
  <C-j> is set to ‘newline’

- New commands:
  py-prettyprint-assignment
  py-toggle-py-split-window-on-execute
  py-toggle-session-mode
  py-show
  py-show-all
  py-hide-section
  py-fast-send-string
  py-toggle-py-verbose-p
  py-execute-buffer-fast

  py-show-FORM commands replaced by single ‘py-show’

- column-marker.el removed, its provided by melpa

- py-smart-indentation defaults to nil. Setting it to ‘t’ considered
  useful if customizing ‘py-indent-offset’ is no option - for example
  if indentation step is unknown.

- `py-comment-auto-fill’ renamed ‘py-toggle-comment-auto-fill'

New in version 6.2.3
---------------------

Commands saying "up" reach one level less indented than start of
current form

New customizable ‘py-shell-fontify-style’ offers some choice
how to fontify py-shell buffer:

"input" will leave previous IN/OUT unfontified.
"all" keeps output fontified too.

Default is nil, no fontification.

New in version 6.2.2
---------------------

Edit-commands will reach beginning-of-line if reasonable
Edit-commands suffixed "-bol" dropped

- Commands
  - py-backward-indent
    Go to the beginning of a section of equal indent
  - py-forward-indent
    Go to the end of a section of equal indentation
  - py-copy-indent
  - py-delete-indent
  - py-kill-indent